feat(Email): add proper email features (#5)
